# isafe-guard-backend

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.aries  LOGGING.md  LOG_API.md  README.md  README.txt  TESTING_LOG_API.md  app.py  application.py  autotrack.py  camera_controllers.py  flask_app.py  gunicorn.conf.py  pyproject.toml  requirements.txt  run_detector.py  streams.py  test-triton.py  usafe_event.txt
database/: db.py  (+1 more)
src/: .gitignore  MIGRATION_FIXES.md  config.local.yaml.example  config.py  config.yaml  enable_db_logging.py  guni_run.py  gunicorn.conf.py  populate_test_logs.py  pyproject.toml  run.py  simple_log_api.py  simple_logs_test.py  test_auto_logging.py  test_log_api.py  test_logging.py  test_logging_simple.py  test_manual_log.py  wsgi.py
src/database/: __init__.py
src/detection/: __init__.py  approtium.py  cutting_welding.py  detector.py  fire_smoke.py  heavy_equipment.py  kdl.py  kdl_detector.py  ladder.py  mobile_scaffolding.py  nexilis_proximity.py  npu_inference.py  object_detection.py  object_detection_eng.py  ppe.py  proximity.py  scaffolding.py
src/detection/common/: __init__.py  face_blurring.py  geometry.py  helmet_detection.py  scaffold_utils.py  tracking.py
src/events/: __init__.py  api.py  emitter.py  events.py  handlers.py  manager.py
src/intrusion/: __init__.py  auto.py  superpoint.py  tracking.py
src/main/: __init__.py
src/main/config/: config.cfg
src/main/event/: model.py  routes.py
src/main/logs/: __init__.py  models.py  routes.py  simple_routes.py
src/main/models/: models.py  routes.py
src/main/shared/: __init__.py
src/main/stream/: model.py  routes.py  routes_old.py  schemas.py  validation.py
src/main/stream/routes/: __init__.py  config.py  control.py  crud.py  patrol.py  ptz.py
src/main/system/: models.py  routes.py
src/main/user/: models.py  routes.py
src/ptz/: __init__.py  autotrack.py  base.py  controller.py  exceptions.py  patrol_mixin.py  tracker.py
src/rabbitmq/: connection.py  consumers.py  manager.py  publisher.py
src/scripts/: convert_models.py
src/socket_/: __init__.py  api.py  emitter.py  events.py  request_utils.py  socketio_handlers.py
src/startup/: __init__.py  services.py
src/streaming/: __init__.py  constants.py  exceptions.py  stream_manager.py  types.py  video_streaming.py
src/streaming/health/: __init__.py  monitor.py
src/streaming/pipelines/: builder.py  manager.py
src/streaming/processing/: __init__.py  event_processor.py  frame_processor.py  recorder.py  stream_output.py
src/utils/: __init__.py  camera_controller.py  config_loader.py  database_log_handler.py  go2rtc_sync.py  log_handler.py  logging_config.py  logging_migration.py  media_processing.py  notifications.py
(+21 files in other folders)
