[tool.poetry]
name = "monitoring"
version = "0.1.0"
description = ""
authors = ["Mkhgkk <emmachalz745@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
run-app = "src.run"

[tool.poetry.dependencies]
python = "3.9.19"
gputil = "1.4.0"
psutil = "6.1.0"
apscheduler = "3.11.0"
flask-cors = "5.0.0"
pymongo = "4.10.1"
pytz = "2024.2"
flask-socketio = "5.4.1"
marshmallow = "3.23.1"
onvif-zeep = {git="https://github.com/Mkhgkk/python-onvif-zeep.git", branch="fix/update-xaddr-url-handling"}
python-jose = "3.3.0"
passlib = "1.7.4"
torch = "2.8.0"
onnx = "1.17.0"
tensorrt = "10.8.0.43"
tensorrt_cu12 = "10.8.0.43"
tensorrt_cu12_bindings = "10.8.0.43"
tensorrt_cu12_libs = "10.8.0.43"
pygobject = "3.40.0"
gunicorn = "23.0.0"
eventlet = "0.40.1"
gevent = "25.5.1"
ultralytics = "8.3.191"
tritonclient = {extras = ["all"], version = "2.40.0"}
pycuda = "^2025.1.1"
boxmot = "^15.0.2"
miniball = "^1.2.0"
sahi = {git = "https://github.com/Mkhgkk/sahi.git", rev = "feat/tensorrt_ultralytics"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"